--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"  "
     },
     "dependencies": {
+        "@types/jest": "^29.5.11",
+        "@types/node": "^20.10.5",
+        "@types/react": "^18.2.45",
+        "@types/react-dom": "^18.2.18",
+        "axios": "^1.6.2",
+        "bootstrap": "^5.3.2",
         "concurrently": "^8.2.2",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mybatis-mapper": "^0.7.1",
+        "mysql": "^2.18.1",
+        "typescript": "^5.3.3"
     }
 }
